--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
       "scripts": {
             "dev": "vite",
             "build": "vite build",
-            "preview": "vite preview"
+            "postinstall": "chmod +x node_modules/.bin/vite"
       }
 }
